fixed text overflow on snippet name in original layout

--- a/browser/render/layouts/original/snippet-item-multi-files/snippet-item-multi-file.sass
+++ b/browser/render/layouts/original/snippet-item-multi-files/snippet-item-multi-file.sass
@@ -30,6 +30,10 @@
         outline: none
         padding: 5px
         display: inline-block
+      .snippet-name
+        text-overflow: ellipsis
+        white-space: nowrap
+        overflow: hidden
     .tools
       height: 100%
       width: 50%
